<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bgmain"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_camera"
            android:layout_width="186dp"
            android:layout_height="123dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layerType="hardware"
            android:text="@string/view_camera"
            android:textSize="25sp"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/listen"
            android:layout_width="120dp"
            android:layout_height="123dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layerType="hardware"
            android:text="@string/listen"
            android:textSize="25sp"
            app:cornerRadius="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:padding="12dp"
        android:text="@string/log_out"
        android:textSize="18sp"
        app:cornerRadius="15dp" />


</LinearLayout>